css/sass/_global.scss
input[type=submit] {
  border-radius: 0;
}

.entry-header h1 {
  margin-bottom: 24px;
}
h1 span {
  color: #555;
  display: block;
  font-size: 16px;
}
.single {
  .entry-content, .entry-meta {
    a {
      text-decoration: underline;
    }
  }
}
a.button {
  text-decoration: none;
}
.emphasis-alert {
  margin: 1em 0;
  padding: 1.6em 1em;
  font-size: 1em;
  background-color: #f9f7e2 !important;
}

.page-numbers {
  padding: 0 4px;
  li {
    a:hover {
      outline: none;
    }
  }
}

ul.loop-results {
  padding: 0;
  li {
    list-style: none;
    border-bottom: 1px dotted #ccc;
  }
}

ul.page-numbers li span {
  display: block;
  color: #26262a;
  background-color: #fff;
  text-align: center;
  border: 2px solid #26262a;
  font-size: 1.25em;
  line-height: 44px;
  width: 48px;
  height: 48px;
  border-radius: 50%;
}

.gallery {
  .gallery-item img {
    display: block;
    width: 100%;
    max-width: 100%;
    height: auto;
  }
}

.entry-meta span {
  color: #bbb;
}

.separator-heading {
  margin-bottom: 24px;
}

.cards p {
  margin: 0;
}

.entry-content .wp-caption-text, .wp-block-image figcaption {
  margin: 0 0 1.6em 0;
  color: #222;
  font-size: .9em;
  clear: both;
  padding: .5em;
  text-align: center;
  background: #eee;
}

